--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_delete_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_delete_dialog.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="310dp"
-    android:layout_height="200dp"
+    android:layout_height="144dp"
     android:background="@drawable/bg_dialog"
     android:orientation="vertical"
     >
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="310dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
@@ -22,10 +22,10 @@
                 android:id="@+id/title"
                 android:layout_marginTop="20dp"
                 android:textColor="#666666"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="区域修改"
+                android:text="删除提示"
                 android:textSize="15sp"
                 />
             <TextView
@@ -34,27 +34,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/add_area"
+                android:text="确定删除执行指令吗？"
                 android:textSize="15sp"
-                />
-            <EditText
-                android:id="@+id/editText"
-                android:layout_marginTop="17dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLength="3"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@mipmap/srk"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textColorHint="#7D7D7D"
                 />
             <View
                 android:layout_width="match_parent"
                 android:background="#EEEEEE"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="26dp"
                 android:layout_height="1dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
