--- a/LaserRadar/Robot/app/src/main/res/layout/item_dialogspinselect.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item_dialogspinselect.xml
@@ -4,4 +4,5 @@
     android:layout_width="fill_parent"
     android:textSize="15sp"
     android:background="@color/white"
+    android:text="@string/add_area"
     android:gravity="center"/>
