--- a/LaserRadar/Robot/app/src/main/res/drawable/bg_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/drawable/bg_dialog.xml
@@ -4,8 +4,8 @@
     <item>
         <shape>
             <solid android:color="#ffffff" />
-            <corners android:topLeftRadius="5dp" android:topRightRadius="5dp"
-                android:bottomRightRadius="5dp" android:bottomLeftRadius="5dp" />
+            <corners android:topLeftRadius="30px" android:topRightRadius="30px"
+                android:bottomRightRadius="30px" android:bottomLeftRadius="30px" />
             <stroke android:width="0dp" android:color="#ffa8abad" />
         </shape>
     </item>
