--- a/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
@@ -145,7 +145,7 @@
                 android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="53dp">
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:background="@color/white"
@@ -160,18 +160,27 @@
                         android:gravity="left|center_vertical"
                         android:textSize="15sp"
                         />
-                    <EditText
+                    <TextView
                         android:inputType="number"
                         android:id="@+id/speed"
                         android:textColorHint="@color/aliceblue"
                         android:textColor="#999999"
                         android:textSize="15sp"
-                        android:layout_marginRight="10dp"
                         android:background="@color/white"
+                        android:layout_marginRight="20dp"
                         android:gravity="right|center"
-                        android:layout_width="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:text="请输入速度"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"/>
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="13dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:background="@mipmap/xyb"/>
+                </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
                     android:background="#EEEEEE"
@@ -183,7 +192,7 @@
                 android:layout_width="match_parent"
                 android:background="@color/white"
                 android:layout_height="53dp">
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -196,18 +205,27 @@
                         android:gravity="left|center_vertical"
                         android:textSize="15sp"
                         />
-                    <EditText
+                    <TextView
                         android:id="@+id/mp3"
                         android:inputType="number"
                         android:textColorHint="@color/aliceblue"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:textColor="#999999"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_alignParentRight="true"
+                        android:text="请输入MP3通道"
                         android:background="@color/white"
                         android:gravity="right|center"
                         android:textSize="15sp"
                         android:layout_height="match_parent"/>
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="13dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:background="@mipmap/xyb"/>
+                </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
                     android:background="#EEEEEE"
@@ -219,7 +237,7 @@
                 android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="53dp">
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -233,19 +251,28 @@
                         android:textSize="15sp"
                         android:id="@+id/textView6" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/outime"
                         android:inputType="number"
                         android:textColor="#999999"
                         android:textSize="15sp"
-                        android:layout_width="match_parent"
-                        android:layout_marginRight="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_marginRight="20dp"
                         android:background="@color/white"
+                        android:layout_alignParentRight="true"
+                        android:text="请输入超时时间"
                         android:gravity="right|center"
                         android:textColorHint="@color/aliceblue"
                         android:layout_height="match_parent"
                         />
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="13dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:background="@mipmap/xyb"/>
+                </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
                     android:background="#EEEEEE"
@@ -257,7 +284,7 @@
                 android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="53dp">
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -270,18 +297,27 @@
                         android:gravity="left|center_vertical"
                         android:textSize="15sp"
                         />
-                    <EditText
+                    <TextView
                         android:inputType="number"
                         android:id="@+id/shownum"
                         android:textColor="#999999"
                         android:textSize="15sp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="20dp"
                         android:background="@color/white"
                         android:textColorHint="@color/aliceblue"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="请输入显示编号"
                         android:gravity="right|center"
                         android:layout_height="match_parent"/>
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="13dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:background="@mipmap/xyb"/>
+                </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
                     android:background="#EEEEEE"
@@ -293,7 +329,7 @@
                 android:layout_width="match_parent"
                 android:background="@color/white"
                 android:layout_height="53dp">
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -306,18 +342,27 @@
                         android:gravity="left|center_vertical"
                         android:textSize="15sp"
                         />
-                    <EditText
+                    <TextView
                         android:inputType="number"
                         android:id="@+id/showcolor"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:textColorHint="@color/aliceblue"
                         android:textColor="#999999"
                         android:textSize="15sp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="20dp"
+                        android:text="请输入显示颜色"
                         android:background="@color/white"
                         android:gravity="right|center"
+                        android:layout_alignParentRight="true"
                         android:layout_height="match_parent"/>
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="13dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:background="@mipmap/xyb"/>
+                </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
                     android:background="#EEEEEE"
@@ -326,6 +371,7 @@
             <Button
                 android:layout_marginTop="52dp"
                 android:id="@+id/btn_sure"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:background="@animator/btn_sure_selector"
                 android:layout_height="46dp" />
