--- a/LaserRadar/Robot/app/src/main/res/layout/activity_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_config.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:background="@color/white"
                 android:layout_height="53dp">
-                <EditText
+                <TextView
                     android:id="@+id/deskname"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -77,15 +77,25 @@
                     android:textSize="15sp"
                     android:layout_marginLeft="10dp"
                     android:background="@null"
-                    android:layout_marginRight="80dp"
+                    android:gravity="center|left"
                     android:maxLength="3"
                     android:textColorHint="#666666"
                     android:textColor="@color/black"
+                    />
+                <ImageView
+                    android:layout_width="7dp"
+                    android:layout_height="13dp"
+                    android:background="@mipmap/xyb"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
                     />
                 <Button
                     android:id="@+id/change_name"
                     android:layout_width="wrap_content"
                     android:background="@null"
+                    android:visibility="gone"
                     android:layout_marginRight="10dp"
                     android:textColor="@animator/btn_sure_desk_selector"
                     android:layout_alignParentRight="true"
