--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
@@ -29,6 +29,7 @@
                 android:textSize="15sp"
                 />
             <TextView
+                android:id="@+id/title_template"
                 android:layout_marginTop="13dp"
                 android:textColor="#333333"
                 android:layout_width="wrap_content"
