--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_spinner_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_spinner_dialog.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/bg_dialog"
+        android:background="@drawable/bg_dialog_more"
         android:layout_alignParentBottom="true"
         android:layout_height="wrap_content">
         <LinearLayout
