--- a/LaserRadar/Robot/app/src/main/res/layout/listview_card.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/listview_card.xml
@@ -35,5 +35,12 @@
             android:visibility="gone"
             android:layout_marginRight="10dp"
             android:layout_height="21dp" />
+        <View
+            android:layout_width="match_parent"
+            android:background="#EEEEEE"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentBottom="true"
+            android:layout_height="1dp"/>
     </RelativeLayout>
 </LinearLayout>
