--- a/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
@@ -19,9 +19,8 @@
             <Button
                 android:id="@+id/back"
                 android:background="@drawable/btn_back_selector"
-                android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
-                android:layout_width="17dp"
+                android:layout_width="21dp"
                 android:layout_height="21dp" />
         </RelativeLayout>
         <TextView
@@ -49,7 +48,8 @@
         android:layout_width="match_parent"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:layout_height="match_parent">
+        android:background="@color/white"
+        android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -75,7 +75,6 @@
                         android:gravity="left|center_vertical"
                         android:textSize="15sp"
                         />
-
                     <TextView
                         android:id="@+id/goal"
                         android:background="@color/white"
@@ -84,23 +83,18 @@
                         android:layout_marginRight="20dp"
                         android:layout_height="match_parent"
                         android:layout_alignParentTop="true"
-                        android:text="请选择站点"
+                        android:hint="请选择站点"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:layout_alignParentRight="true"
                         />
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginLeft="10dp"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:id="@+id/linear_direction"
                 android:orientation="vertical"
@@ -128,22 +122,18 @@
                         android:background="@color/white"
                         android:gravity="right|center"
                         android:layout_marginRight="20dp"
-                        android:text="请选择方向"
+                        android:hint="请选择方向"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:layout_height="match_parent"
                         />
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginLeft="10dp"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:id="@+id/linear_speed"
                 android:orientation="vertical"
@@ -168,29 +158,23 @@
                     <TextView
                         android:inputType="number"
                         android:id="@+id/speed"
-                        android:textColorHint="@color/aliceblue"
-                        android:textColor="#999999"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:textSize="15sp"
                         android:background="@color/white"
                         android:layout_marginRight="20dp"
                         android:gravity="right|center"
                         android:layout_alignParentRight="true"
-                        android:text="请输入速度"
+                        android:hint="请输入速度"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"/>
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginLeft="10dp"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:id="@+id/linear_mp3"
                 android:orientation="vertical"
@@ -213,29 +197,23 @@
                     <TextView
                         android:id="@+id/mp3"
                         android:inputType="number"
-                        android:textColorHint="@color/aliceblue"
                         android:layout_width="wrap_content"
-                        android:textColor="#999999"
                         android:layout_marginRight="20dp"
                         android:layout_alignParentRight="true"
-                        android:text="请输入MP3通道"
+                        android:hint="请输入MP3通道"
                         android:background="@color/white"
                         android:gravity="right|center"
                         android:textSize="15sp"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:layout_height="match_parent"/>
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginLeft="10dp"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:id="@+id/linear_outime"
                 android:orientation="vertical"
@@ -259,30 +237,24 @@
                     <TextView
                         android:id="@+id/outime"
                         android:inputType="number"
-                        android:textColor="#999999"
                         android:textSize="15sp"
                         android:layout_width="wrap_content"
                         android:layout_marginRight="20dp"
                         android:background="@color/white"
                         android:layout_alignParentRight="true"
-                        android:text="请输入超时时间"
+                        android:hint="请输入超时时间"
                         android:gravity="right|center"
-                        android:textColorHint="@color/aliceblue"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:layout_height="match_parent"
                         />
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginLeft="10dp"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:id="@+id/linear_shownum"
                 android:orientation="vertical"
@@ -305,29 +277,23 @@
                     <TextView
                         android:inputType="number"
                         android:id="@+id/shownum"
-                        android:textColor="#999999"
                         android:textSize="15sp"
                         android:layout_marginRight="20dp"
                         android:background="@color/white"
-                        android:textColorHint="@color/aliceblue"
                         android:layout_width="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:text="请输入显示编号"
+                        android:hint="请输入显示编号"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:gravity="right|center"
                         android:layout_height="match_parent"/>
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginLeft="10dp"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:id="@+id/linear_showcolor"
                 android:orientation="vertical"
@@ -351,27 +317,16 @@
                         android:inputType="number"
                         android:id="@+id/showcolor"
                         android:layout_width="wrap_content"
-                        android:textColorHint="@color/aliceblue"
-                        android:textColor="#999999"
                         android:textSize="15sp"
                         android:layout_marginRight="20dp"
-                        android:text="请输入显示颜色"
+                        android:hint="请输入显示颜色"
+                        android:textColor="#666666"
+                        android:textColorHint="#999999"
                         android:background="@color/white"
                         android:gravity="right|center"
                         android:layout_alignParentRight="true"
                         android:layout_height="match_parent"/>
-                    <ImageView
-                        android:layout_width="7dp"
-                        android:layout_height="13dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:background="@mipmap/xyb"/>
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:background="#EEEEEE"
-                    android:layout_height="1dp"/>
             </LinearLayout>
             <Button
                 android:layout_marginTop="52dp"
@@ -382,4 +337,8 @@
                 android:layout_height="46dp" />
         </LinearLayout>
     </ScrollView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#EEEEEE"/>
 </LinearLayout>
