--- a/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/back"
                 android:background="@drawable/btn_back_selector"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
                 android:layout_width="21dp"
                 android:layout_height="21dp" />
         </RelativeLayout>
