--- a/LaserRadar/Robot/app/src/main/res/layout/desk_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/desk_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="110dp"
-    android:layout_height="110dp"
+    android:layout_width="114dp"
+    android:layout_height="113dp"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/white"
     >
     <RelativeLayout
-        android:layout_width="110dp"
-        android:layout_height="110dp">
+        android:layout_width="114dp"
+        android:layout_height="113dp">
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -47,6 +47,7 @@
             android:layout_width="70dp"
             android:gravity="center"
             android:textColor="#666666"
+            android:lineSpacingExtra="6dp"
             android:textSize="15sp"
             android:layout_height="70dp" />
         <View
