--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_delete_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_delete_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="310dp"
     android:layout_height="144dp"
-    android:background="@drawable/bg_dialog"
+    android:background="@drawable/bg_dialog_delete"
     android:orientation="vertical"
     >
         <LinearLayout
