--- a/LaserRadar/Robot/app/src/main/res/layout/grid_dialog_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/grid_dialog_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="76dp"
-    android:layout_height="106dp"
+    android:layout_height="137dp"
     android:orientation="horizontal"
     android:background="@color/white"
     >
@@ -9,7 +9,7 @@
         android:id="@+id/imageview"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:layout_alignParentTop="true"
         android:background="@mipmap/zaixian"
         android:layout_alignRight="@+id/text"
@@ -48,4 +48,14 @@
         android:layout_marginTop="7dp"
         android:layout_below="@+id/text"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="21dp"
+        android:id="@+id/chooseImage"
+        android:layout_centerVertical="true"
+        android:background="@mipmap/xuanze"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/name"
+        android:layout_marginTop="10dp"
+        android:layout_height="21dp" />
 </RelativeLayout>
