--- a/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
@@ -9,8 +9,7 @@
         android:id="@+id/imageview"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
         android:background="@mipmap/zaixian"
         android:layout_alignRight="@+id/text"
@@ -42,11 +41,11 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textColor="#333333"
         android:text="@string/deskname"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_below="@+id/imageview"
+        android:layout_marginTop="7dp"
+        android:layout_below="@+id/text"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
