--- a/LaserRadar/RobotClientUdp/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/RobotClientUdp/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                 android:textColor="@color/black"
                 android:layout_marginRight="17dp"
                 android:textSize="25sp"
-                android:background="@animator/btn_direct_selector"
+                android:background="@mipmap/refresh"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 />
