--- a/LaserRadar/RobotClientUdp/app/src/main/res/drawable/btn_direct_selector.xml
+++ b/LaserRadar/RobotClientUdp/app/src/main/res/drawable/btn_direct_selector.xml
@@ -2,6 +2,6 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@mipmap/bianji_pre" />
-    <item android:drawable="@mipmap/bianji_no" />
+        android:drawable="@mipmap/refresh_pre" />
+    <item android:drawable="@mipmap/refresh" />
 </selector>
