--- a/LaserRadar/RobotClientUdp/app/src/main/res/layout/activity_start.xml
+++ b/LaserRadar/RobotClientUdp/app/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     >
     <ImageView
-        android:background="@mipmap/china"
+        android:background="@mipmap/flashview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
