--- a/sjx/SJX_Robot/app/src/main/res/layout/sjx_desk_item.xml
+++ b/sjx/SJX_Robot/app/src/main/res/layout/sjx_desk_item.xml
@@ -2,70 +2,90 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="106dp"
     android:layout_height="106dp"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/white"
-    >
+    android:gravity="center"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="106dp"
         android:layout_height="106dp">
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#EEEEEE"/>
+            android:background="#EEEEEE" />
+
         <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="#EEEEEE"/>
+            android:background="#EEEEEE" />
+
         <View
-            android:layout_alignParentRight="true"
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#EEEEEE"/>
+            android:layout_alignParentRight="true"
+            android:background="#EEEEEE" />
+
         <ImageView
             android:id="@+id/bjzt"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_alignParentRight="true"
             android:background="@mipmap/bjzt"
-            />
+            android:visibility="gone" />
+
+        <CheckBox
+            android:id="@+id/ck_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_margin="@dimen/len_2"
+            android:background="@drawable/chk_agee_provision_background"
+            android:button="@null"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
+            android:visibility="gone" />
+
         <ImageView
             android:layout_width="70dp"
-            android:visibility="gone"
+            android:layout_height="70dp"
             android:layout_centerInParent="true"
             android:background="@animator/btn_desk_selector"
-            android:layout_height="70dp" />
+            android:visibility="gone" />
+
         <ImageView
             android:id="@+id/image"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_centerInParent="true"
-            />
+            android:layout_centerInParent="true" />
+
         <TextView
             android:id="@+id/name"
-            android:layout_centerInParent="true"
             android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_centerInParent="true"
             android:gravity="center"
             android:textColor="#666666"
-            android:textSize="25sp"
-            android:layout_height="70dp" />
+            android:textSize="25sp" />
+
         <View
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#EEEEEE"/>
+            android:layout_alignParentBottom="true"
+            android:background="#EEEEEE" />
     </RelativeLayout>
     <!--<TextView-->
-        <!--android:id="@+id/text"-->
-        <!--android:layout_marginTop="9dp"-->
-        <!--android:layout_weight="3"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:text="@string/btn_cancle"-->
-        <!--android:gravity="center"-->
-        <!--android:visibility="gone"-->
-        <!--android:textSize="13sp"-->
-        <!--android:textColor="#666666"-->
-        <!--/>-->
+    <!--android:id="@+id/text"-->
+    <!--android:layout_marginTop="9dp"-->
+    <!--android:layout_weight="3"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:text="@string/btn_cancle"-->
+    <!--android:gravity="center"-->
+    <!--android:visibility="gone"-->
+    <!--android:textSize="13sp"-->
+    <!--android:textColor="#666666"-->
+    <!--/>-->
 </LinearLayout>
